Как работает сеть в K8s/src/NetworkPolicy/back-cache.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cachetest
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backendtest
    ports:
      - protocol: TCP
        port: 80
