Как работает сеть в K8s/src/NetworkPolicy/deny-all-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: App
spec:
  podSelector: {}
  policyTypes:
  - Egress
