Как работает сеть в K8s/src/NetworkPolicy/deny-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: App
spec:
  podSelector: {}
  policyTypes:
  - Ingress
