Как работает сеть в K8s/src/NetworkPolicy/front-back.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backendtest
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontendtest
    ports:
      - protocol: TCP
        port: 80
